# app/models/responses/wallet_nonce_verify_response.py
@@ -8,4 +8,5 @@ class WalletVerifyResponse(BaseModel):
     token_symbol: str
     chain_id: int
     is_active: bool
+    is_approval: bool
     verified_at: str
